Ususual Trade Analysis

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -4385,8 +4385,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "76b0a01e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== UNUSUAL TRADE SIZES ANALYSIS ===\n",
+      "Identifying top 1% largest trade sizes...\n",
+      "=== VOLUME PERCENTILE THRESHOLDS ===\n",
+      "50.0th percentile: 200\n",
+      "75.0th percentile: 799\n",
+      "90.0th percentile: 2,440\n",
+      "95.0th percentile: 4,485\n",
+      "99.0th percentile: 13,820\n",
+      "99.9th percentile: 38,091\n",
+      "\n",
+      "Unusual trade size threshold (top 1%): 13,820\n",
+      "\n",
+      "=== UNUSUAL TRADES SUMMARY ===\n",
+      "Total unusual trades (top 1%): 110\n",
+      "Percentage of total trades: 1.00%\n",
+      "Total volume in unusual trades: 2,781,296\n",
+      "Percentage of total volume: 24.16%\n",
+      "\n",
+      "=== ALL UNUSUAL TRADES (TOP 1%) ===\n",
+      "Rank Time         Price    Quantity   Turnover     Cum Turnover   \n",
+      "--------------------------------------------------------------------------------\n",
+      "1    15:01:57     ₹387.05  153,858    ₹59,550,738.90 ₹3,896,603,224.25\n",
+      "2    09:20:41     ₹389.30  67,256     ₹26,182,760.80 ₹344,731,947.85\n",
+      "3    09:15:00     ₹386.85  65,740     ₹25,431,519.00 ₹25,431,519.00 \n",
+      "4    12:08:06     ₹385.05  60,580     ₹23,326,329.00 ₹1,993,683,235.00\n",
+      "5    12:08:12     ₹384.80  55,402     ₹21,318,689.60 ₹2,016,729,133.00\n",
+      "6    14:40:45     ₹385.95  54,602     ₹21,073,641.90 ₹3,498,574,314.65\n",
+      "7    09:20:49     ₹389.85  43,873     ₹17,103,889.05 ₹361,847,515.90\n",
+      "8    14:45:21     ₹386.40  43,199     ₹16,692,093.60 ₹3,611,221,840.20\n",
+      "9    15:07:53     ₹387.80  42,697     ₹16,557,896.60 ₹4,012,897,672.80\n",
+      "10   14:05:06     ₹385.15  40,953     ₹15,773,047.95 ₹3,066,209,083.95\n",
+      "11   14:45:12     ₹386.05  40,000     ₹15,442,000.00 ₹3,593,732,275.95\n",
+      "12   15:28:54     ₹388.25  38,001     ₹14,753,888.25 ₹4,433,507,314.40\n",
+      "13   10:40:13     ₹388.05  36,352     ₹14,106,393.60 ₹1,181,149,654.55\n",
+      "14   10:30:25     ₹388.15  35,050     ₹13,604,657.50 ₹1,059,454,173.20\n",
+      "15   14:16:13     ₹385.80  33,636     ₹12,976,768.80 ₹3,165,278,654.70\n",
+      "16   09:21:01     ₹389.65  33,563     ₹13,077,822.95 ₹374,925,338.85\n",
+      "17   14:59:34     ₹387.00  33,376     ₹12,916,512.00 ₹3,793,698,696.55\n",
+      "18   10:46:23     ₹387.60  33,297     ₹12,905,917.20 ₹1,304,605,638.80\n",
+      "19   12:43:06     ₹384.70  32,819     ₹12,625,469.30 ₹2,323,273,980.00\n",
+      "20   14:39:07     ₹386.05  32,811     ₹12,666,686.55 ₹3,461,254,453.35\n",
+      "21   10:17:48     ₹388.85  32,072     ₹12,471,197.20 ₹965,010,705.05\n",
+      "22   09:18:14     ₹389.00  31,428     ₹12,225,492.00 ₹222,028,512.70\n",
+      "23   11:02:02     ₹387.00  30,882     ₹11,951,334.00 ₹1,451,275,099.90\n",
+      "24   14:20:20     ₹386.30  30,597     ₹11,819,621.10 ₹3,204,131,146.85\n",
+      "25   12:17:06     ₹386.40  30,424     ₹11,755,833.60 ₹2,115,828,939.65\n",
+      "26   14:37:29     ₹386.25  30,288     ₹11,698,740.00 ₹3,421,333,843.00\n",
+      "27   09:58:30     ₹387.80  27,948     ₹10,838,234.40 ₹810,861,813.25\n",
+      "28   15:20:26     ₹387.85  27,894     ₹10,818,687.90 ₹4,262,217,243.40\n",
+      "29   10:40:08     ₹388.15  27,344     ₹10,613,573.60 ₹1,165,820,430.95\n",
+      "30   14:22:17     ₹386.40  27,002     ₹10,433,572.80 ₹3,247,740,153.35\n",
+      "31   13:50:34     ₹385.00  26,669     ₹10,267,565.00 ₹2,963,162,647.70\n",
+      "32   14:11:39     ₹385.40  26,355     ₹10,157,217.00 ₹3,109,312,966.05\n",
+      "33   14:44:40     ₹386.40  26,299     ₹10,161,933.60 ₹3,555,979,160.85\n",
+      "34   14:44:51     ₹386.10  26,203     ₹10,116,978.30 ₹3,566,163,741.65\n",
+      "35   11:25:31     ₹386.60  26,173     ₹10,118,481.80 ₹1,619,352,953.35\n",
+      "36   14:22:05     ₹386.30  26,151     ₹10,102,131.30 ₹3,235,707,091.55\n",
+      "37   14:44:34     ₹386.40  26,130     ₹10,096,632.00 ₹3,545,816,454.55\n",
+      "38   14:37:57     ₹386.15  25,744     ₹9,941,045.60 ₹3,433,395,652.75\n",
+      "39   12:42:49     ₹385.00  25,415     ₹9,784,775.00 ₹2,301,199,306.40\n",
+      "40   14:45:00     ₹386.45  25,183     ₹9,731,970.35 ₹3,576,848,311.25\n",
+      "41   13:14:20     ₹384.20  23,941     ₹9,198,132.20 ₹2,587,201,979.00\n",
+      "42   11:37:01     ₹385.95  23,354     ₹9,013,476.30 ₹1,701,722,658.35\n",
+      "43   14:22:29     ₹386.30  23,279     ₹8,992,677.70 ₹3,258,084,071.85\n",
+      "44   11:02:00     ₹387.00  23,213     ₹8,983,431.00 ₹1,439,225,455.20\n",
+      "45   09:26:58     ₹389.00  23,182     ₹9,017,798.00 ₹507,733,619.00\n",
+      "46   14:25:38     ₹385.10  22,639     ₹8,718,278.90 ₹3,315,524,377.15\n",
+      "47   11:36:34     ₹386.25  22,282     ₹8,606,422.50 ₹1,692,201,677.40\n",
+      "48   09:56:35     ₹388.40  22,027     ₹8,555,286.80 ₹785,263,738.75\n",
+      "49   09:17:24     ₹387.95  21,993     ₹8,532,184.35 ₹190,605,492.65\n",
+      "50   11:16:56     ₹387.70  21,846     ₹8,469,694.20 ₹1,554,894,209.00\n",
+      "51   14:23:04     ₹386.20  21,478     ₹8,294,803.60 ₹3,275,187,164.75\n",
+      "52   15:00:04     ₹387.35  21,410     ₹8,293,163.50 ₹3,803,909,913.65\n",
+      "53   14:51:34     ₹386.80  21,144     ₹8,178,499.20 ₹3,687,205,016.90\n",
+      "54   10:31:53     ₹387.90  20,921     ₹8,115,255.90 ₹1,092,782,650.40\n",
+      "55   15:11:00     ₹387.30  20,741     ₹8,032,989.30 ₹4,089,213,478.25\n",
+      "56   15:17:56     ₹388.05  20,717     ₹8,039,231.85 ₹4,207,204,422.30\n",
+      "57   11:53:29     ₹385.75  20,234     ₹7,805,265.50 ₹1,871,130,125.65\n",
+      "58   14:21:48     ₹386.25  20,163     ₹7,787,958.75 ₹3,222,589,456.25\n",
+      "59   14:24:21     ₹385.65  20,101     ₹7,751,950.65 ₹3,293,130,130.55\n",
+      "60   09:17:16     ₹387.60  19,892     ₹7,710,139.20 ₹180,496,125.70\n",
+      "61   13:14:51     ₹384.25  19,589     ₹7,527,073.25 ₹2,598,226,825.05\n",
+      "62   09:20:33     ₹389.15  19,580     ₹7,619,557.00 ₹318,510,272.05\n",
+      "63   12:17:01     ₹386.20  19,316     ₹7,459,839.20 ₹2,104,073,106.05\n",
+      "64   09:18:31     ₹389.15  19,299     ₹7,510,205.85 ₹239,838,201.15\n",
+      "65   10:42:01     ₹387.75  19,202     ₹7,445,575.50 ₹1,226,019,155.20\n",
+      "66   13:50:39     ₹385.00  19,158     ₹7,375,830.00 ₹2,970,538,477.70\n",
+      "67   09:18:23     ₹389.45  19,083     ₹7,431,874.35 ₹230,820,426.55\n",
+      "68   09:35:41     ₹389.05  18,202     ₹7,081,488.10 ₹623,732,994.90\n",
+      "69   15:20:33     ₹387.95  17,827     ₹6,915,984.65 ₹4,269,183,642.05\n",
+      "70   09:17:08     ₹387.60  17,699     ₹6,860,132.40 ₹170,786,228.50\n",
+      "71   13:51:13     ₹384.90  17,620     ₹6,781,938.00 ₹2,980,287,536.95\n",
+      "72   14:44:17     ₹386.60  17,509     ₹6,768,979.40 ₹3,533,901,188.85\n",
+      "73   09:59:02     ₹388.40  17,444     ₹6,775,249.60 ₹819,963,866.35\n",
+      "74   09:18:47     ₹388.45  17,426     ₹6,769,129.70 ₹251,789,815.60\n",
+      "75   09:18:55     ₹389.05  17,196     ₹6,690,103.80 ₹258,480,307.85\n",
+      "76   13:44:32     ₹384.70  17,128     ₹6,589,141.60 ₹2,888,397,213.85\n",
+      "77   10:00:55     ₹388.50  17,077     ₹6,634,414.50 ₹851,184,772.05\n",
+      "78   10:46:29     ₹387.60  16,834     ₹6,524,858.40 ₹1,311,213,809.70\n",
+      "79   11:24:44     ₹386.95  16,834     ₹6,513,916.30 ₹1,597,502,544.95\n",
+      "80   15:06:51     ₹387.80  16,797     ₹6,513,876.60 ₹3,984,218,742.55\n",
+      "81   09:29:38     ₹388.45  16,750     ₹6,506,537.50 ₹546,205,610.35\n",
+      "82   12:50:39     ₹385.00  16,428     ₹6,324,780.00 ₹2,405,639,267.60\n",
+      "83   09:19:53     ₹389.10  16,221     ₹6,311,591.10 ₹288,967,743.05\n",
+      "84   09:27:28     ₹388.90  16,043     ₹6,239,122.70 ₹515,276,131.50\n",
+      "85   14:30:12     ₹385.95  16,005     ₹6,177,129.75 ₹3,363,660,303.50\n",
+      "86   09:16:59     ₹387.60  15,914     ₹6,168,266.40 ₹161,454,370.90\n",
+      "87   10:42:49     ₹387.75  15,621     ₹6,057,042.75 ₹1,241,916,681.15\n",
+      "88   13:19:34     ₹384.05  15,619     ₹5,998,476.95 ₹2,636,069,397.55\n",
+      "89   09:40:36     ₹389.70  15,553     ₹6,061,004.10 ₹675,905,644.85\n",
+      "90   09:18:06     ₹388.85  15,524     ₹6,036,507.40 ₹209,800,298.05\n",
+      "91   09:20:17     ₹389.15  15,248     ₹5,933,759.20 ₹305,767,466.55\n",
+      "92   09:26:13     ₹388.95  15,248     ₹5,930,709.60 ₹491,244,597.20\n",
+      "93   13:48:36     ₹384.95  15,221     ₹5,859,323.95 ₹2,943,050,120.30\n",
+      "94   09:25:27     ₹388.95  15,181     ₹5,904,649.95 ₹476,933,736.25\n",
+      "95   13:22:46     ₹384.00  15,113     ₹5,803,392.00 ₹2,681,610,213.70\n",
+      "96   13:25:30     ₹383.85  15,037     ₹5,771,952.45 ₹2,717,590,655.55\n",
+      "97   14:36:14     ₹386.30  15,007     ₹5,797,204.10 ₹3,402,116,846.90\n",
+      "98   10:43:51     ₹387.70  14,884     ₹5,770,526.80 ₹1,262,313,313.95\n",
+      "99   12:42:50     ₹385.00  14,745     ₹5,676,825.00 ₹2,306,876,131.40\n",
+      "100  13:44:28     ₹385.15  14,711     ₹5,665,941.65 ₹2,881,808,072.25\n",
+      "101  09:23:56     ₹389.15  14,702     ₹5,721,283.30 ₹450,789,111.55\n",
+      "102  09:59:08     ₹388.35  14,633     ₹5,682,725.55 ₹825,710,644.90\n",
+      "103  14:16:03     ₹385.60  14,558     ₹5,613,564.80 ₹3,151,525,690.70\n",
+      "104  12:07:24     ₹385.15  14,322     ₹5,516,118.30 ₹1,959,933,962.10\n",
+      "105  10:40:24     ₹387.75  14,307     ₹5,547,539.25 ₹1,193,298,417.40\n",
+      "106  09:21:55     ₹389.90  14,224     ₹5,545,937.60 ₹405,012,184.60\n",
+      "107  09:23:33     ₹389.45  14,076     ₹5,481,898.20 ₹442,247,223.35\n",
+      "108  13:10:28     ₹384.35  14,025     ₹5,390,508.75 ₹2,559,164,607.60\n",
+      "109  10:57:08     ₹388.25  13,895     ₹5,394,733.75 ₹1,387,760,360.70\n",
+      "110  09:15:08     ₹386.00  13,838     ₹5,341,468.00 ₹43,402,867.25 \n",
+      "\n",
+      "=== DETAILED ANALYSIS OF UNUSUAL TRADES ===\n",
+      "\n",
+      "--- SIZE DISTRIBUTION ---\n",
+      "Size distribution of unusual trades:\n",
+      "  Huge (10K-50K): 104 trades\n",
+      "  Massive (>50K): 6 trades\n",
+      "\n",
+      "--- TIME DISTRIBUTION ---\n",
+      "Hourly distribution of unusual trades:\n",
+      "  09:00-09:59: 32 trades\n",
+      "  10:00-10:59: 13 trades\n",
+      "  11:00-11:59: 8 trades\n",
+      "  12:00-12:59: 9 trades\n",
+      "  13:00-13:59: 12 trades\n",
+      "  14:00-14:59: 27 trades\n",
+      "  15:00-15:59: 9 trades\n",
+      "\n",
+      "--- PRICE ANALYSIS ---\n",
+      "Average price of unusual trades: ₹387.02\n",
+      "Price range of unusual trades: ₹383.85 - ₹389.90\n",
+      "Price standard deviation: ₹1.58\n",
+      "\n",
+      "--- MARKET IMPACT ANALYSIS ---\n",
+      "Unusual trades represent:\n",
+      "  Volume: 2,781,296 / 11,510,171 = 24.16%\n",
+      "  Turnover: ₹1,076,308,067.55 / ₹4,451,969,111.70 = 24.18%\n",
+      "\n",
+      "--- TOP 5 LARGEST SINGLE TRADES ---\n",
+      "1. 15:01:57 - 153,858 shares at ₹387.05\n",
+      "   Turnover: ₹59,550,738.90\n",
+      "2. 09:20:41 - 67,256 shares at ₹389.30\n",
+      "   Turnover: ₹26,182,760.80\n",
+      "3. 09:15:00 - 65,740 shares at ₹386.85\n",
+      "   Turnover: ₹25,431,519.00\n",
+      "4. 12:08:06 - 60,580 shares at ₹385.05\n",
+      "   Turnover: ₹23,326,329.00\n",
+      "5. 12:08:12 - 55,402 shares at ₹384.80\n",
+      "   Turnover: ₹21,318,689.60\n",
+      "\n",
+      "--- STATISTICAL COMPARISON ---\n",
+      "Unusual trades vs Normal trades:\n",
+      "  Average size: 25,285 vs 805\n",
+      "  Median size: 20,729 vs 194\n",
+      "  Size ratio: 31.4x larger\n",
+      "\n",
+      "--- CLUSTERING ANALYSIS ---\n",
+      "Unusual trades within 5 minutes of each other: 86\n",
+      "Clustering percentage: 78.2%\n",
+      "\n",
+      "=== EXPORT DATA ===\n",
+      "Unusual trades data is available in 'unusual_trades' DataFrame\n",
+      "You can export this data for further analysis\n",
+      "\n",
+      "=== SUMMARY TABLE ===\n",
+      "        Metric             Value\n",
+      "         Count               110\n",
+      "  Total Volume         2,781,296\n",
+      "Total Turnover ₹1,076,308,067.55\n",
+      "      Avg Size            25,285\n",
+      " Largest Trade           153,858\n",
+      "    Time Range     09:15 - 15:28\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify unusual trade sizes (top 1% volume)\n",
+    "print(\"=== UNUSUAL TRADE SIZES ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate the 99th percentile threshold for unusual trade sizes\n",
+    "print(\"Identifying top 1% largest trade sizes...\")\n",
+    "\n",
+    "# Calculate volume percentiles\n",
+    "volume_percentiles = df['qty'].quantile([0.5, 0.75, 0.9, 0.95, 0.99, 0.999])\n",
+    "unusual_threshold = volume_percentiles[0.99]\n",
+    "\n",
+    "print(f\"=== VOLUME PERCENTILE THRESHOLDS ===\")\n",
+    "for p, v in volume_percentiles.items():\n",
+    "    print(f\"{p*100:3.1f}th percentile: {v:,.0f}\")\n",
+    "\n",
+    "print(f\"\\nUnusual trade size threshold (top 1%): {unusual_threshold:,.0f}\")\n",
+    "\n",
+    "# Identify unusual trades (top 1%)\n",
+    "unusual_trades = df[df['qty'] >= unusual_threshold].copy()\n",
+    "unusual_trades = unusual_trades.sort_values('qty', ascending=False)\n",
+    "\n",
+    "print(f\"\\n=== UNUSUAL TRADES SUMMARY ===\")\n",
+    "print(f\"Total unusual trades (top 1%): {len(unusual_trades):,}\")\n",
+    "print(f\"Percentage of total trades: {(len(unusual_trades)/len(df)*100):.2f}%\")\n",
+    "print(f\"Total volume in unusual trades: {unusual_trades['qty'].sum():,}\")\n",
+    "print(f\"Percentage of total volume: {(unusual_trades['qty'].sum()/df['qty'].sum()*100):.2f}%\")\n",
+    "\n",
+    "# Display all unusual trades\n",
+    "print(f\"\\n=== ALL UNUSUAL TRADES (TOP 1%) ===\")\n",
+    "print(f\"{'Rank':<4} {'Time':<12} {'Price':<8} {'Quantity':<10} {'Turnover':<12} {'Cum Turnover':<15}\")\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "for idx, (_, row) in enumerate(unusual_trades.iterrows(), 1):\n",
+    "    print(f\"{idx:<4} {row['date'].strftime('%H:%M:%S'):<12} ₹{row['price']:<7.2f} {row['qty']:<10,} ₹{row['trnvr']:<11,.2f} ₹{row['cum_trnvr']:<14,.2f}\")\n",
+    "\n",
+    "# Detailed analysis of unusual trades\n",
+    "print(f\"\\n=== DETAILED ANALYSIS OF UNUSUAL TRADES ===\")\n",
+    "\n",
+    "# 1. Size distribution of unusual trades\n",
+    "print(\"\\n--- SIZE DISTRIBUTION ---\")\n",
+    "unusual_trades['size_category'] = unusual_trades['qty'].apply(lambda x: \n",
+    "    'Large (1K-5K)' if x <= 5000 else\n",
+    "    'Very Large (5K-10K)' if x <= 10000 else\n",
+    "    'Huge (10K-50K)' if x <= 50000 else\n",
+    "    'Massive (>50K)'\n",
+    ")\n",
+    "\n",
+    "size_distribution = unusual_trades['size_category'].value_counts()\n",
+    "print(\"Size distribution of unusual trades:\")\n",
+    "for category, count in size_distribution.items():\n",
+    "    print(f\"  {category}: {count} trades\")\n",
+    "\n",
+    "# 2. Time distribution of unusual trades\n",
+    "print(f\"\\n--- TIME DISTRIBUTION ---\")\n",
+    "unusual_trades['hour'] = unusual_trades['date'].dt.hour\n",
+    "hourly_distribution = unusual_trades['hour'].value_counts().sort_index()\n",
+    "\n",
+    "print(\"Hourly distribution of unusual trades:\")\n",
+    "for hour, count in hourly_distribution.items():\n",
+    "    print(f\"  {hour:02d}:00-{hour:02d}:59: {count} trades\")\n",
+    "\n",
+    "# 3. Price analysis of unusual trades\n",
+    "print(f\"\\n--- PRICE ANALYSIS ---\")\n",
+    "print(f\"Average price of unusual trades: ₹{unusual_trades['price'].mean():.2f}\")\n",
+    "print(f\"Price range of unusual trades: ₹{unusual_trades['price'].min():.2f} - ₹{unusual_trades['price'].max():.2f}\")\n",
+    "print(f\"Price standard deviation: ₹{unusual_trades['price'].std():.2f}\")\n",
+    "\n",
+    "# 4. Impact analysis\n",
+    "print(f\"\\n--- MARKET IMPACT ANALYSIS ---\")\n",
+    "total_volume = df['qty'].sum()\n",
+    "total_turnover = df['trnvr'].sum()\n",
+    "\n",
+    "print(f\"Unusual trades represent:\")\n",
+    "print(f\"  Volume: {unusual_trades['qty'].sum():,} / {total_volume:,} = {(unusual_trades['qty'].sum()/total_volume*100):.2f}%\")\n",
+    "print(f\"  Turnover: ₹{unusual_trades['trnvr'].sum():,.2f} / ₹{total_turnover:,.2f} = {(unusual_trades['trnvr'].sum()/total_turnover*100):.2f}%\")\n",
+    "\n",
+    "# 5. Largest single trades\n",
+    "print(f\"\\n--- TOP 5 LARGEST SINGLE TRADES ---\")\n",
+    "top_5_trades = unusual_trades.head(5)\n",
+    "for idx, (_, row) in enumerate(top_5_trades.iterrows(), 1):\n",
+    "    print(f\"{idx}. {row['date'].strftime('%H:%M:%S')} - {row['qty']:,} shares at ₹{row['price']:.2f}\")\n",
+    "    print(f\"   Turnover: ₹{row['trnvr']:,.2f}\")\n",
+    "\n",
+    "# 6. Statistical comparison\n",
+    "print(f\"\\n--- STATISTICAL COMPARISON ---\")\n",
+    "print(\"Unusual trades vs Normal trades:\")\n",
+    "print(f\"  Average size: {unusual_trades['qty'].mean():,.0f} vs {df[df['qty'] < unusual_threshold]['qty'].mean():,.0f}\")\n",
+    "print(f\"  Median size: {unusual_trades['qty'].median():,.0f} vs {df[df['qty'] < unusual_threshold]['qty'].median():,.0f}\")\n",
+    "print(f\"  Size ratio: {unusual_trades['qty'].mean() / df[df['qty'] < unusual_threshold]['qty'].mean():.1f}x larger\")\n",
+    "\n",
+    "# 7. Clustering analysis\n",
+    "print(f\"\\n--- CLUSTERING ANALYSIS ---\")\n",
+    "# Check if unusual trades are clustered in time\n",
+    "unusual_trades_sorted = unusual_trades.sort_values('date')\n",
+    "time_diffs = unusual_trades_sorted['date'].diff().dt.total_seconds() / 60  # in minutes\n",
+    "\n",
+    "clustered_trades = time_diffs[time_diffs <= 5]  # Within 5 minutes\n",
+    "print(f\"Unusual trades within 5 minutes of each other: {len(clustered_trades)}\")\n",
+    "print(f\"Clustering percentage: {(len(clustered_trades)/len(unusual_trades)*100):.1f}%\")\n",
+    "\n",
+    "# 8. Export unusual trades data\n",
+    "print(f\"\\n=== EXPORT DATA ===\")\n",
+    "print(\"Unusual trades data is available in 'unusual_trades' DataFrame\")\n",
+    "print(\"You can export this data for further analysis\")\n",
+    "\n",
+    "# Summary table\n",
+    "print(f\"\\n=== SUMMARY TABLE ===\")\n",
+    "summary_data = {\n",
+    "    'Metric': ['Count', 'Total Volume', 'Total Turnover', 'Avg Size', 'Largest Trade', 'Time Range'],\n",
+    "    'Value': [\n",
+    "        len(unusual_trades),\n",
+    "        f\"{unusual_trades['qty'].sum():,}\",\n",
+    "        f\"₹{unusual_trades['trnvr'].sum():,.2f}\",\n",
+    "        f\"{unusual_trades['qty'].mean():,.0f}\",\n",
+    "        f\"{unusual_trades['qty'].max():,}\",\n",
+    "        f\"{unusual_trades['date'].min().strftime('%H:%M')} - {unusual_trades['date'].max().strftime('%H:%M')}\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "summary_df = pd.DataFrame(summary_data)\n",
+    "print(summary_df.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60bd37ab",
    "metadata": {},
    "outputs": [],
    "source": []
