Bidirectional Trade Analysis

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -4714,8 +4714,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "60bd37ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== BIDIRECTIONAL PRICE CHANGES ANALYSIS ===\n",
+      "Analyzing price movement directions...\n",
+      "=== DIRECTION DISTRIBUTION ===\n",
+      "Total price ticks: 10,956\n",
+      "No change ticks: 4,441 (40.53%)\n",
+      "Down ticks: 3,299 (30.11%)\n",
+      "Up ticks: 3,216 (29.35%)\n",
+      "\n",
+      "Up/Down ratio: 0.975\n",
+      "Down ticks are 1.0x more frequent than up ticks\n",
+      "\n",
+      "=== DIRECTION ANALYSIS BY TIME INTERVALS ===\n",
+      "Minute-by-minute direction analysis:\n",
+      "Minutes with up bias (>1.2 ratio): 88\n",
+      "Minutes with down bias (<0.8 ratio): 103\n",
+      "Minutes with neutral bias (0.8-1.2 ratio): ((minute_direction['up_down_ratio'] >= 0.8) & (minute_direction['up_down_ratio'] <= 1.2)).sum()\n",
+      "\n",
+      "Hourly direction analysis:\n",
+      "  09:00-09:59: Up=336, Down=348, Ratio=0.97 (Neutral)\n",
+      "  10:00-10:59: Up=467, Down=478, Ratio=0.98 (Neutral)\n",
+      "  11:00-11:59: Up=485, Down=538, Ratio=0.90 (Neutral)\n",
+      "  12:00-12:59: Up=544, Down=565, Ratio=0.96 (Neutral)\n",
+      "  13:00-13:59: Up=455, Down=473, Ratio=0.96 (Neutral)\n",
+      "  14:00-14:59: Up=450, Down=428, Ratio=1.05 (Neutral)\n",
+      "  15:00-15:59: Up=479, Down=469, Ratio=1.02 (Neutral)\n",
+      "\n",
+      "=== CONSECUTIVE DIRECTION STREAKS ===\n",
+      "Up streaks: 2717\n",
+      "Down streaks: 2774\n",
+      "Longest up streak: 7 ticks\n",
+      "Average up streak: 1.2 ticks\n",
+      "Longest down streak: 5 ticks\n",
+      "Average down streak: 1.2 ticks\n",
+      "\n",
+      "=== DIRECTION CHANGE FREQUENCY ===\n",
+      "Total direction changes: 7884\n",
+      "Average ticks per direction change: 1.4\n",
+      "\n",
+      "=== PRICE CHANGE MAGNITUDE BY DIRECTION ===\n",
+      "Up ticks:\n",
+      "  Average change: ₹0.0939\n",
+      "  Median change: ₹0.1000\n",
+      "  Max change: ₹0.7500\n",
+      "Down ticks:\n",
+      "  Average change: ₹-0.0911\n",
+      "  Median change: ₹-0.0500\n",
+      "  Max change: ₹-0.6500\n",
+      "\n",
+      "=== DIRECTION BIAS SUMMARY ===\n",
+      "Overall bias: Downward\n",
+      "Up ticks: 3,216 (29.4%)\n",
+      "Down ticks: 3,299 (30.1%)\n",
+      "No change: 4,441 (40.5%)\n",
+      "\n",
+      "=== EXPORT DATA ===\n",
+      "Direction analysis data is available in:\n",
+      "- 'minute_direction': Minute-by-minute direction breakdown\n",
+      "- 'hourly_direction': Hourly direction breakdown\n",
+      "- 'streaks': List of consecutive direction streaks\n",
+      "\n",
+      "=== SAMPLE MINUTE DIRECTION DATA (First 10 rows) ===\n",
+      "direction            Up  Down  up_down_ratio  total_ticks\n",
+      "minute_key                                               \n",
+      "2025-08-07 09:15:00  37    47       0.787234          116\n",
+      "2025-08-07 09:16:00  33    28       1.178571           94\n",
+      "2025-08-07 09:17:00   9     3       3.000000           15\n",
+      "2025-08-07 09:18:00   7     4       1.750000           14\n",
+      "2025-08-07 09:19:00  25    24       1.041667           96\n",
+      "2025-08-07 09:20:00   5     5       1.000000           13\n",
+      "2025-08-07 09:21:00  30    30       1.000000           94\n",
+      "2025-08-07 09:22:00  34    36       0.944444          105\n",
+      "2025-08-07 09:23:00   5     7       0.714286           14\n",
+      "2025-08-07 09:24:00   3     8       0.375000           15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute bidirectional price changes (number of up vs. down ticks)\n",
+    "print(\"=== BIDIRECTIONAL PRICE CHANGES ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate price changes (if not already calculated)\n",
+    "if 'price_change' not in df.columns:\n",
+    "    df['price_change'] = df['price'].diff()\n",
+    "\n",
+    "# Create direction column (if not already created)\n",
+    "if 'direction' not in df.columns:\n",
+    "    df['direction'] = df['price_change'].apply(lambda x: \n",
+    "        'Up' if x > 0 else \n",
+    "        'Down' if x < 0 else \n",
+    "        'No change'\n",
+    "    )\n",
+    "\n",
+    "print(\"Analyzing price movement directions...\")\n",
+    "\n",
+    "# Count the occurrences of each direction\n",
+    "direction_counts = df['direction'].value_counts()\n",
+    "total_ticks = len(df)\n",
+    "\n",
+    "print(f\"=== DIRECTION DISTRIBUTION ===\")\n",
+    "print(f\"Total price ticks: {total_ticks:,}\")\n",
+    "\n",
+    "for direction, count in direction_counts.items():\n",
+    "    percentage = (count / total_ticks) * 100\n",
+    "    print(f\"{direction} ticks: {count:,} ({percentage:.2f}%)\")\n",
+    "\n",
+    "# Calculate up vs down ratio\n",
+    "up_ticks = direction_counts.get('Up', 0)\n",
+    "down_ticks = direction_counts.get('Down', 0)\n",
+    "no_change_ticks = direction_counts.get('No change', 0)\n",
+    "\n",
+    "if down_ticks > 0:\n",
+    "    up_down_ratio = up_ticks / down_ticks\n",
+    "    print(f\"\\nUp/Down ratio: {up_down_ratio:.3f}\")\n",
+    "    print(f\"Up ticks are {up_down_ratio:.1f}x more frequent than down ticks\" if up_down_ratio > 1 else f\"Down ticks are {1/up_down_ratio:.1f}x more frequent than up ticks\")\n",
+    "\n",
+    "# Direction analysis by time intervals\n",
+    "print(f\"\\n=== DIRECTION ANALYSIS BY TIME INTERVALS ===\")\n",
+    "\n",
+    "# 1. Minute-by-minute direction analysis\n",
+    "df['minute_key'] = df['date'].dt.floor('1min')\n",
+    "minute_direction = df.groupby('minute_key')['direction'].value_counts().unstack(fill_value=0)\n",
+    "\n",
+    "# Calculate up/down ratio per minute\n",
+    "minute_direction['up_down_ratio'] = minute_direction['Up'] / minute_direction['Down'].replace(0, 1)\n",
+    "minute_direction['total_ticks'] = minute_direction['Up'] + minute_direction['Down'] + minute_direction.get('No change', 0)\n",
+    "\n",
+    "print(f\"Minute-by-minute direction analysis:\")\n",
+    "print(f\"Minutes with up bias (>1.2 ratio): {(minute_direction['up_down_ratio'] > 1.2).sum()}\")\n",
+    "print(f\"Minutes with down bias (<0.8 ratio): {(minute_direction['up_down_ratio'] < 0.8).sum()}\")\n",
+    "print(f\"Minutes with neutral bias (0.8-1.2 ratio): ((minute_direction['up_down_ratio'] >= 0.8) & (minute_direction['up_down_ratio'] <= 1.2)).sum()\")\n",
+    "\n",
+    "# 2. Hourly direction analysis\n",
+    "df['hour_key'] = df['date'].dt.hour\n",
+    "hourly_direction = df.groupby('hour_key')['direction'].value_counts().unstack(fill_value=0)\n",
+    "\n",
+    "# Calculate up/down ratio per hour\n",
+    "hourly_direction['up_down_ratio'] = hourly_direction['Up'] / hourly_direction['Down'].replace(0, 1)\n",
+    "hourly_direction['total_ticks'] = hourly_direction['Up'] + hourly_direction['Down'] + hourly_direction.get('No change', 0)\n",
+    "\n",
+    "print(f\"\\nHourly direction analysis:\")\n",
+    "for hour in hourly_direction.index:\n",
+    "    up_count = hourly_direction.loc[hour, 'Up']\n",
+    "    down_count = hourly_direction.loc[hour, 'Down']\n",
+    "    ratio = hourly_direction.loc[hour, 'up_down_ratio']\n",
+    "    total = hourly_direction.loc[hour, 'total_ticks']\n",
+    "    \n",
+    "    bias = \"Up\" if ratio > 1.2 else \"Down\" if ratio < 0.8 else \"Neutral\"\n",
+    "    print(f\"  {hour:02d}:00-{hour:02d}:59: Up={up_count}, Down={down_count}, Ratio={ratio:.2f} ({bias})\")\n",
+    "\n",
+    "# 3. Consecutive direction streaks\n",
+    "print(f\"\\n=== CONSECUTIVE DIRECTION STREAKS ===\")\n",
+    "\n",
+    "def find_streaks(directions):\n",
+    "    \"\"\"Find consecutive streaks of the same direction\"\"\"\n",
+    "    streaks = []\n",
+    "    current_streak = 1\n",
+    "    current_direction = directions.iloc[0]\n",
+    "    \n",
+    "    for i in range(1, len(directions)):\n",
+    "        if directions.iloc[i] == current_direction:\n",
+    "            current_streak += 1\n",
+    "        else:\n",
+    "            if current_direction != 'No change':  # Only count meaningful streaks\n",
+    "                streaks.append((current_direction, current_streak))\n",
+    "            current_streak = 1\n",
+    "            current_direction = directions.iloc[i]\n",
+    "    \n",
+    "    # Add the last streak\n",
+    "    if current_direction != 'No change':\n",
+    "        streaks.append((current_direction, current_streak))\n",
+    "    \n",
+    "    return streaks\n",
+    "\n",
+    "# Find streaks in the data\n",
+    "streaks = find_streaks(df['direction'])\n",
+    "\n",
+    "# Analyze streaks\n",
+    "up_streaks = [s for s in streaks if s[0] == 'Up']\n",
+    "down_streaks = [s for s in streaks if s[0] == 'Down']\n",
+    "\n",
+    "print(f\"Up streaks: {len(up_streaks)}\")\n",
+    "print(f\"Down streaks: {len(down_streaks)}\")\n",
+    "\n",
+    "if up_streaks:\n",
+    "    print(f\"Longest up streak: {max(up_streaks, key=lambda x: x[1])[1]} ticks\")\n",
+    "    print(f\"Average up streak: {sum(s[1] for s in up_streaks) / len(up_streaks):.1f} ticks\")\n",
+    "\n",
+    "if down_streaks:\n",
+    "    print(f\"Longest down streak: {max(down_streaks, key=lambda x: x[1])[1]} ticks\")\n",
+    "    print(f\"Average down streak: {sum(s[1] for s in down_streaks) / len(down_streaks):.1f} ticks\")\n",
+    "\n",
+    "# 4. Direction change frequency\n",
+    "print(f\"\\n=== DIRECTION CHANGE FREQUENCY ===\")\n",
+    "direction_changes = (df['direction'] != df['direction'].shift()).sum()\n",
+    "print(f\"Total direction changes: {direction_changes}\")\n",
+    "print(f\"Average ticks per direction change: {total_ticks / direction_changes:.1f}\")\n",
+    "\n",
+    "# 5. Price change magnitude analysis\n",
+    "print(f\"\\n=== PRICE CHANGE MAGNITUDE BY DIRECTION ===\")\n",
+    "up_changes = df[df['direction'] == 'Up']['price_change']\n",
+    "down_changes = df[df['direction'] == 'Down']['price_change']\n",
+    "\n",
+    "if len(up_changes) > 0:\n",
+    "    print(f\"Up ticks:\")\n",
+    "    print(f\"  Average change: ₹{up_changes.mean():.4f}\")\n",
+    "    print(f\"  Median change: ₹{up_changes.median():.4f}\")\n",
+    "    print(f\"  Max change: ₹{up_changes.max():.4f}\")\n",
+    "\n",
+    "if len(down_changes) > 0:\n",
+    "    print(f\"Down ticks:\")\n",
+    "    print(f\"  Average change: ₹{down_changes.mean():.4f}\")\n",
+    "    print(f\"  Median change: ₹{down_changes.median():.4f}\")\n",
+    "    print(f\"  Max change: ₹{down_changes.min():.4f}\")\n",
+    "\n",
+    "# 6. Direction bias summary\n",
+    "print(f\"\\n=== DIRECTION BIAS SUMMARY ===\")\n",
+    "print(f\"Overall bias: {'Upward' if up_ticks > down_ticks else 'Downward' if down_ticks > up_ticks else 'Neutral'}\")\n",
+    "print(f\"Up ticks: {up_ticks:,} ({up_ticks/total_ticks*100:.1f}%)\")\n",
+    "print(f\"Down ticks: {down_ticks:,} ({down_ticks/total_ticks*100:.1f}%)\")\n",
+    "print(f\"No change: {no_change_ticks:,} ({no_change_ticks/total_ticks*100:.1f}%)\")\n",
+    "\n",
+    "# 7. Export direction data\n",
+    "print(f\"\\n=== EXPORT DATA ===\")\n",
+    "print(\"Direction analysis data is available in:\")\n",
+    "print(\"- 'minute_direction': Minute-by-minute direction breakdown\")\n",
+    "print(\"- 'hourly_direction': Hourly direction breakdown\")\n",
+    "print(\"- 'streaks': List of consecutive direction streaks\")\n",
+    "\n",
+    "# Display sample of minute direction data\n",
+    "print(f\"\\n=== SAMPLE MINUTE DIRECTION DATA (First 10 rows) ===\")\n",
+    "print(minute_direction[['Up', 'Down', 'up_down_ratio', 'total_ticks']].head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64c1421d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99420454",
    "metadata": {},
    "outputs": [],
    "source": []
